Refactoring
Improved performance when calling FAIR Champion